Update Travis test env.

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -1,9 +1,14 @@
 name: test
 channels:
+  - pytorch
 dependencies:
     # Base depends
   - python
   - pip
+  - numpy
+  - scipy
+  - tqdm
+  - pytorch
 
     # Testing
   - pytest
@@ -12,4 +17,5 @@ dependencies:
   # Pip-only installs
   - pip:
     - codecov
+    - ProDy
 
