Use yapf for automatic formatting. Google style with column length 90.

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,10 @@ omit =
 
 [yapf]
 # YAPF, in .style.yapf files this shows up as "[style]" header
-COLUMN_LIMIT = 119
+COLUMN_LIMIT = 90
 INDENT_WIDTH = 4
 USE_TABS = False
+BASED_ON_STYLE = google
 
 [flake8]
 # Flake8, PyFlakes, etc
