--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
     language: generic
     env: PYTHON_VER=3.8
   - os: linux
-    language: generic  # No need to set Python version since its conda
+    language: generic
     env: PYTHON_VER=3.6
   - os: linux
     language: generic
