--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,6 @@ errors/
 *ignored/
 *.dssp
 *.stride
+sidechainnet/examples/snNerf Performance Evaluation.ipynb
+sidechainnet/examples/test imports.ipynb
+sidechainnet/examples/test_complete_structures_only.ipynb
