Revert "Remove irrelevant OpenMM modifications."
This reverts commit 8f7a7f03ccd99f7feb561e20e5dc80c7ba06f135.

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,6 @@ errors/
 *.stride
 *.fa
 sidechainnet/resources/proteinnet*
+sidechainnet/examples/snNerf Performance Evaluation.ipynb
+sidechainnet/examples/test imports.ipynb
+sidechainnet/examples/test_complete_structures_only.ipynb
