Ignore forcefield data.

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ errors/
 sidechainnet/resources/proteinnet*
 *sidechainnet/examples/*ipynb
 sidechainnet_data
+sidechainnet/resources/forcefield_info
