Implement support for SCNDataset, SCNProtein, and HydrogenBuilder.

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,6 @@ errors/
 *.stride
 *.fa
 sidechainnet/resources/proteinnet*
+*sidechainnet/examples/*ipynb
+sidechainnet_data
+sidechainnet/resources/forcefield_info
