Request forces from OpenMM as numpy.

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,4 @@ sidechainnet/resources/proteinnet*
 *sidechainnet/examples/*ipynb
 sidechainnet_data
 sidechainnet/resources/forcefield_info
+runtime*html
