--- a/sidechainnet/research/cluster/220121/220121_sweep.yaml
+++ b/sidechainnet/research/cluster/220121/220121_sweep.yaml
@@ -1,7 +1,7 @@
 program: /net/pulsar/home/koes/jok120/repos/sidechainnet/sidechainnet/research/cluster/train.py
 method: bayes
 metric:
-  name: Test Epoch RMSE
+  name: Valid Epoch RMSE
   goal: minimize
 parameters:
   name:
@@ -52,7 +52,7 @@ parameters:
   n_layers:
     distribution: int_uniform
     min: 1
-    max: 12
+    max: 16
   optimizer:
     distribution: categorical
     values:
