Update descr of sidechain data in build_info. Update .gitignore to ignore research files.

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,9 @@ sidechainnet/resources/proteinnet*
 *sidechainnet/examples/*ipynb
 sidechainnet_data
 sidechainnet/resources/forcefield_info
+*runtime*html
+resources/dev/*
+*slurm*.out
+*_*.out
+*wandb*
+*.chkpt
