Add research code.

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,6 @@ sidechainnet/utils/openmmpdb.py
 sidechainnet/research/analysis/plots
 *.prof_stats*
 test_minimize_alpha.png
+sidechainnet/research/reconfigure_alignments/**/*.txt
+sidechainnet/research/reconfigure_alignments/**/*.pkl
+seq_dict.pkl
